test/subjects/general/prepostop_error2.php
<?php
	// error: tests/subjects/general/prepostop_error2.php:5: error: Variable name expected
	// return: 2

	++f();
?>
